--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingBottom="50dp"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="dev42.ironlife.MainActivity">
+    android:orientation="vertical"
+    tools:context="dev42.ironlife.MainActivity"
+    android:background="@drawable/backgroud">
 
-    <TextView
+    <ImageView
+        android:id="@+id/logo"
         android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:src="@drawable/logoironlife"
+        android:layout_weight="1"/>
+    <EditText
+        android:id="@+id/login"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
-</RelativeLayout>
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:hint="@string/hint_login"
+        android:textColor="@color/cortextobranco"
+        android:textColorHint="@color/cortextobranco"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="@color/cortextobranco"/>
+    <EditText
+        android:id="@+id/senha"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:hint="@string/hint_senha"
+        android:inputType="textPassword"
+        android:textColor="@color/cortextobranco"
+        android:textColorHint="@color/cortextobranco"
+        android:backgroundTint="@color/cortextobranco"/>
+
+    <CheckBox
+        android:id="@+id/checksalvar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:text="@string/check_salvar_dados"
+        android:layout_gravity="center"
+        android:textColor="@color/cortextobranco"
+        android:checked="true"
+        android:buttonTint="@color/cortextobranco"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:text="Login"
+        android:layout_gravity="center"
+        android:textColor="@color/cortextobranco"
+        android:background="@color/coralerta"
+        android:layout_marginTop="16dp"/>
+
+</LinearLayout>
