--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,8 @@
         android:textColor="@color/cortextobranco"
         android:textColorHint="@color/cortextobranco"
         android:layout_marginTop="16dp"
-        android:backgroundTint="@color/cortextobranco"/>
+        android:backgroundTint="@color/cortextobranco"
+        android:singleLine="true"/>
     <EditText
         android:id="@+id/senha"
         android:layout_width="match_parent"
@@ -43,7 +44,8 @@
         android:inputType="textPassword"
         android:textColor="@color/cortextobranco"
         android:textColorHint="@color/cortextobranco"
-        android:backgroundTint="@color/cortextobranco"/>
+        android:backgroundTint="@color/cortextobranco"
+        android:singleLine="true"/>
 
     <CheckBox
         android:id="@+id/checksalvar"
