--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,8 @@
     <color name="colorAccent">#ffffff</color>
     <color name="cortextobranco">#ffffff</color>
     <color name="coralerta">#bd5000</color>
+    <color name="corbarras">#00c7ec</color>
+    <color name="backgroundescuro">#002f43</color>
+
+
 </resources>
