--- a/app/src/main/res/layout/activity_evento.xml
+++ b/app/src/main/res/layout/activity_evento.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_intro"
+    android:id="@+id/activity_evento"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="dev42.ironlife.activities.IntroActivity"
+    tools:context="dev42.ironlife.activities.EventoActivity"
     android:background="@color/backgroundescuro">
 
     <ImageView
-        android:id="@+id/imagemtoponews"
+        android:id="@+id/imagemtopoeventos"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:src="@drawable/imgintro"
@@ -17,10 +17,10 @@
         android:adjustViewBounds="true"/>
 
     <RelativeLayout
-        android:id="@+id/barrarelativenews"
+        android:id="@+id/barrarelativeeventos"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/imagemtoponews">
+        android:layout_below="@+id/imagemtopoeventos">
 
         <ImageView
             android:id="@+id/barranews"
@@ -30,32 +30,35 @@
             android:src="@drawable/backgroud" />
 
         <TextView
-            android:id="@+id/textbarranews"
+            android:id="@+id/textbarraeventos"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/barra_news"
+            android:text="@string/barra_eventos"
             android:textSize="20sp"
             android:textColor="@color/cortextobranco"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
             android:layout_alignParentLeft="true"
             android:layout_centerInParent="true"/>
-
-        <Button
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:text="+"
-            android:textColor="@color/cortextobranco"
-            android:background="@color/corbarras"
-            android:layout_alignParentRight="true"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"/>
     </RelativeLayout>
 
     <ListView
-        android:id="@+id/listviewnews"
+        android:id="@+id/listvieweventos"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_below="@+id/barrarelativenews">
+        android:layout_below="@+id/barrarelativeeventos">
     </ListView>
 
+    <Button
+        android:id="@+id/btnadd"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:text="+"
+        android:textSize="25sp"
+        android:textColor="@color/cortextobranco"
+        android:background="@drawable/btn_redondo"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"/>
 </RelativeLayout>
