--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="dev42.ironlife.MainActivity"
+    tools:context="dev42.ironlife.activities.MainActivity"
     android:background="@drawable/backgroud">
 
     <ImageView
