--- a/app/src/main/res/layout/activity_evento.xml
+++ b/app/src/main/res/layout/activity_evento.xml
@@ -42,12 +42,20 @@
             android:layout_centerInParent="true"/>
     </RelativeLayout>
 
-    <ListView
-        android:id="@+id/listvieweventos"
-        android:layout_width="wrap_content"
+    <android.support.v4.widget.SwipeRefreshLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/swiperefresh"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/barrarelativeeventos">
-    </ListView>
+
+        <ListView
+            android:id="@+id/listvieweventos"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            >
+        </ListView>
+    </android.support.v4.widget.SwipeRefreshLayout>
 
     <Button
         android:id="@+id/btnadd"
