--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,8 @@
     <color name="coralerta">#bd5000</color>
     <color name="corbarras">#00c7ec</color>
     <color name="backgroundescuro">#002f43</color>
+    <color name="azulmedio">#006599</color>
+
 
 
 </resources>
