--- a/app/src/main/res/layout/activity_evento.xml
+++ b/app/src/main/res/layout/activity_evento.xml
@@ -44,7 +44,7 @@
 
     <android.support.v4.widget.SwipeRefreshLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/swiperefresh"
+        android:id="@+id/swipe"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/barrarelativeeventos">
