--- a/app/src/main/res/layout/activity_add_evento.xml
+++ b/app/src/main/res/layout/activity_add_evento.xml
@@ -20,6 +20,7 @@
         android:textColor="@color/cortextobranco"
         android:textColorHint="@color/cortextobranco"
         android:backgroundTint="@color/cortextobranco"
+        android:lines="1"
         android:singleLine="true"/>
 
     <LinearLayout
