--- a/app/src/main/res/layout/activity_view_evento.xml
+++ b/app/src/main/res/layout/activity_view_evento.xml
@@ -4,13 +4,11 @@
     android:id="@+id/activity_add_evento"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     tools:context="dev42.ironlife.activities.AddEventoActivity"
-    android:background="@color/backgroundescuro">
+    android:background="@color/backgroundescuro"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"    >
 
     <TextView
         android:id="@+id/addtitulo"
@@ -20,13 +18,16 @@
         android:textColor="@color/cortextobranco"
         android:textColorHint="@color/cortextobranco"
         android:backgroundTint="@color/cortextobranco"
-        android:lines="1" />
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="16dp">
+        android:layout_marginTop="16dp"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin">
 
         <TextView
             android:id="@+id/datainicio"
@@ -54,7 +55,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="16dp">
+        android:layout_marginTop="16dp"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin">
 
         <TextView
             android:id="@+id/datafim"
@@ -88,13 +91,40 @@
         android:textColorHint="@color/cortextobranco"
         android:backgroundTint="@color/cortextobranco"
         android:focusable="false"
-        android:layout_marginTop="16dp"/>
+        android:layout_marginTop="16dp"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"/>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp">
+
+        <ImageView
+            android:id="@+id/guardioesalistados"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:foreground="@color/corbarras"
+            android:src="@drawable/backgroud"
+            />
+
+        <TextView
+            android:id="@+id/textguardioesalistados"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/barra_alistados"
+            android:textSize="20sp"
+            android:textColor="@color/cortextobranco"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:layout_alignParentLeft="true"
+            android:layout_centerInParent="true"/>
+    </RelativeLayout>
 
     <ListView
         android:id="@+id/usuarios"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="16dp">
+        android:layout_height="match_parent">
 
     </ListView>
 
