--- a/app/src/main/res/values/urls.xml
+++ b/app/src/main/res/values/urls.xml
@@ -7,6 +7,7 @@
     <item name="url_cancelar_evento" type="string">http://www.dev42.com.br/ironlife/app/eventousuario/remover/</item>
     <item name="url_evento_com_usuarios" type="string">http://www.dev42.com.br/ironlife/app/rest/listar_evento_com_usuarios/</item>
     <item name="url_lista_usuarios_evento" type="string">http://www.dev42.com.br/ironlife/app/rest/listar_usuarios_evento/</item>
+    <item name="url_validar_usuario" type="string">http://www.dev42.com.br/ironlife/app/usuarios/validar/</item>
 
     <item name="url_lista_eventos_local" type="string">http://10.1.1.105/ironlife/app/rest/listar_eventos/</item>
     <item name="url_cria_evento_local" type="string">http://10.1.1.105/ironlife/app/rest/criar_evento/</item>
@@ -15,4 +16,5 @@
     <item name="url_cancelar_evento_local" type="string">http://10.1.1.105/ironlife/app/eventousuario/remover/</item>
     <item name="url_evento_com_usuarios_local" type="string">http://10.1.1.105/ironlife/app/rest/listar_evento_com_usuarios/</item>
     <item name="url_lista_usuarios_evento_local" type="string">http://10.1.1.105/ironlife/app/rest/listar_usuarios_evento/</item>
+    <item name="url_validar_usuario_local" type="string">http://10.1.1.105/ironlife/app/usuarios/validar/</item>
 </resources>
