--- a/app/src/main/res/layout/activity_evento.xml
+++ b/app/src/main/res/layout/activity_evento.xml
@@ -42,12 +42,24 @@
             android:layout_centerInParent="true"/>
     </RelativeLayout>
 
+    <FrameLayout
+        android:id="@+id/frameload"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/barrarelativeeventos">
+
+        <ProgressBar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </FrameLayout>
+
     <android.support.v4.widget.SwipeRefreshLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/swipe"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/barrarelativeeventos">
+        android:layout_below="@+id/frameload">
 
         <ListView
             android:id="@+id/listvieweventos"
